Translations and copyright

--- a/app/src/main/res/layout/activity_ticket.xml
+++ b/app/src/main/res/layout/activity_ticket.xml
@@ -8,17 +8,17 @@
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
-        ads:adSize="BANNER"
-        ads:adUnitId="ca-app-pub-6202710455352099/6361829689"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-6202710455352099/6361829689" />
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView3"
-        ads:adSize="BANNER"
-        ads:adUnitId="ca-app-pub-6202710455352099/6361829689"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-6202710455352099/6361829689" />
 
     <TextView
         android:id="@+id/winningNumbersTextView"
@@ -40,111 +40,111 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/block1"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:layout_margin="4dp"
-            android:textColor="@color/white"
-            ads:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent"
             android:text="@string/x"
-            android:textSize="24sp" />
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            ads:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/block2"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:layout_margin="4dp"
-            android:textColor="@color/white"
-            ads:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent"
             android:text="@string/x"
+            android:textColor="@color/white"
+            android:textSize="24sp"
 
-            android:textSize="24sp" />
+            ads:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/block3"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:layout_margin="4dp"
-            android:textColor="@color/white"
-            ads:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent"
             android:text="@string/x"
-            android:textSize="24sp" />
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            ads:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/block4"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:layout_margin="4dp"
-            android:textColor="@color/white"
-            ads:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent"
             android:text="@string/x"
-            android:textSize="24sp" />
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            ads:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/block5"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:layout_margin="4dp"
-            android:textColor="@color/white"
-            ads:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent"
             android:text="@string/x"
-            android:textSize="24sp" />
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            ads:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/block6"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:layout_margin="4dp"
-            android:textColor="@color/white"
-            ads:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent"
             android:text="@string/x"
-            android:textSize="24sp" />
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            ads:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/block7"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:layout_margin="4dp"
-            android:textColor="@color/white"
-            ads:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent"
             android:text="@string/x"
-            android:textSize="24sp" />
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            ads:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/block8"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:layout_margin="4dp"
-            android:textColor="@color/white"
-            ads:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent"
             android:text="@string/x"
-            android:textSize="24sp" />
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            ads:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/block9"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_rowWeight="1"
             android:layout_columnWeight="1"
             android:layout_margin="4dp"
-            android:textColor="@color/white"
-            ads:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent"
             android:text="@string/x"
-            android:textSize="24sp" />
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            ads:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent" />
     </GridLayout>
 
     <TextView
@@ -163,15 +163,16 @@
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView2"
-        ads:adSize="BANNER"
-        ads:adUnitId="ca-app-pub-6202710455352099/6361829689"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-6202710455352099/6361829689" />
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView4"
-        ads:adSize="BANNER"
-        ads:adUnitId="ca-app-pub-6202710455352099/6361829689"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-6202710455352099/6361829689" />
+
 </LinearLayout>
