--- a/app/src/main/res/layout/activity_redeem.xml
+++ b/app/src/main/res/layout/activity_redeem.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".activities.RedeemActivity">
+    tools:context=".activities.impl.RedeemActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
