--- a/app/src/main/res/layout/activity_slotmachine.xml
+++ b/app/src/main/res/layout/activity_slotmachine.xml
@@ -3,59 +3,55 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <com.google.android.gms.ads.AdView
-            android:id="@+id/adView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            ads:adSize="BANNER"
-            ads:adUnitId="ca-app-pub-6202710455352099/6361829689" />
-    </LinearLayout>
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-6202710455352099/6361829689" />
 
     <ImageView
         android:id="@+id/reel1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/adView4"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
         android:adjustViewBounds="true"
+        android:importantForAccessibility="no"
         android:maxHeight="100dp"
-        android:scaleType="centerInside"
-        android:importantForAccessibility="no" />
+        android:scaleType="centerInside" />
 
     <ImageView
         android:id="@+id/reel2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/reel1"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
-        android:layout_below="@id/reel1"
         android:adjustViewBounds="true"
+        android:importantForAccessibility="no"
         android:maxHeight="100dp"
-        android:scaleType="centerInside"
-        android:importantForAccessibility="no" />
+        android:scaleType="centerInside" />
 
     <ImageView
         android:id="@+id/reel3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/reel2"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
-        android:layout_below="@id/reel2"
         android:adjustViewBounds="true"
+        android:importantForAccessibility="no"
         android:maxHeight="100dp"
-        android:scaleType="centerInside"
-        android:importantForAccessibility="no" />
+        android:scaleType="centerInside" />
 
     <TextView
         android:id="@+id/totalPointsTextView"
-        android:layout_below="@id/reel3"
-        android:layout_centerHorizontal="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/reel3"
+        android:layout_centerHorizontal="true"
         android:text="@string/total_points"
         android:textSize="20sp" />
 
@@ -68,31 +64,28 @@
         android:layout_marginTop="50dp"
         android:text="@string/spin" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/spinButton"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-6202710455352099/6361829689" />
 
-        <com.google.android.gms.ads.AdView
-            android:id="@+id/adView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            ads:adSize="BANNER"
-            ads:adUnitId="ca-app-pub-6202710455352099/6361829689" />
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/adView"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-6202710455352099/6361829689" />
 
-        <com.google.android.gms.ads.AdView
-            android:id="@+id/adView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            ads:adSize="BANNER"
-            ads:adUnitId="ca-app-pub-6202710455352099/6361829689" />
-
-        <com.google.android.gms.ads.AdView
-            android:id="@+id/adView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            ads:adSize="BANNER"
-            ads:adUnitId="ca-app-pub-6202710455352099/6361829689" />
-    </LinearLayout>
-
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/adView2"
+        ads:adSize="BANNER"
+        ads:adUnitId="ca-app-pub-6202710455352099/6361829689" />
 
 </RelativeLayout>
